kubernetes/crane-svc-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
 name: crane-http
subsets:
  - addresses:
    - ip: 172.17.0.4
    - ip: 172.17.0.6
    - ip: 172.17.0.7
    ports:
      - port: 8080
