kubernetes/crane-svc-external-name.yml
apiVersion: v1
kind: Service
metadata:
 name: crane-http-external
 labels:
  app: crane
spec:
 type: ExternalName
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 8080
 selector:
   app: crane
