kubernetes/crane-svc-multiport.yml
apiVersion: v1
kind: Service
metadata:
 name: crane-http
 labels:
  app: crane
spec:
 ports:
 - name: http
   port: 80
   targetPort: http
 - name: https
   port: 443
   targetPort: 8443
 selector:
   app: crane
 type: LoadBalancer
