kubernetes/crane-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
 name: crane-nodeport
spec:
 type: NodePort
 ports:
 - port: 8080
   targetPort: 8080
   nodePort: 30123
 selector:
   app: crane
