kubernetes/crane-svc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: crane-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 tls:
   - hosts:
      - crane-story.com
     secretName: tls-secret
 rules:
   - host: crane-story.com
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crane-http
              port:
                number: 8080
